[package]
name = "pong-deluxe"
version = "0.1.0"
authors = ["Joseph Schulte <schulteajoseph@gmail.com>"]
edition = "2018"

[dependencies]
specs = "0.14.3"
specs-derive = "0.4.0"
ash = "0.28.0"
byteorder = "1.3.1"
sdl2 = "0.32.1"
vk-mem = "0.1.5"
rayon = "1.0.3"
num_cpus = "1.10.0"
itertools = "0.8.0"
rand = "0.6.5"